* configure.ac, libltdl/configure.ac: s/##/dnl/ for comments that are meaningless in configure. Reported by Alexandre Duret-Lutz <adl@src.lip6.fr>.

--- a/libltdl/configure.ac
+++ b/libltdl/configure.ac
@@ -22,7 +22,7 @@
 # configure this directory if your user doesn't want to use the installed
 # libltdl.
 
-AC_PREREQ(2.59) ## We use AS_HELP_STRING
+AC_PREREQ(2.59)dnl We use AS_HELP_STRING
 
 
 ## ------------------------ ##
