--- a/.cvsignore
+++ b/.cvsignore
@@ -1,4 +1,5 @@
 .*.prcs_aux
+.clcommitrc
 COPYING
 INSTALL
 Makefile
@@ -7,10 +8,12 @@ acinclude.m4
 aclocal.m4
 autom4te.cache
 clibtool.cfg
+commit
 configure
 config.*
+config-h.in
 libtool
 libtoolize
+libtoolize.in
 patches
 stamp-vcl
-config-h.in
