--- a/.cvsignore
+++ b/.cvsignore
@@ -1,12 +1,18 @@
 .*.prcs_aux
+COPYING
+INSTALL
 Makefile
 Makefile.in
 acinclude.m4
 aclocal.m4
+autom4te.cache
 clibtool.cfg
+compile
 configure
 config.*
+install-sh
 libtool
 ltmain.sh
 ltconfig
 libtoolize
+missing
