--- a/libltdl/.cvsignore
+++ b/libltdl/.cvsignore
@@ -4,10 +4,15 @@ Makefile
 Makefile.in
 acinclude.m4
 aclocal.m4
+autom4te.cache
 configure
 config.*
+config-h.in
 conftest*
+install-sh
 libtool
+ltmain.sh
+missing
 *.lo
 *.la
 stamp-h*
