Most of the hair introduced ostensibly to enable testing of uninstalled libtoolize isn't necessary if we allow overriding of the libtool master copy directory:
* configure.ac (pkvmacrodir): No need to substitute this.
* Makefile.am (edit): No need to substitute pkgvmacrodir.
(dist_pkgvdata_DATA): Use nobase_ prefix so that these files are
installed to $(pkgvdatadir)/config.
(pkgvmacro_DATA): Renamed to...
(nobase_pkgvdata_DATA): ...this, so that files are installed to
$(pkgvdatadir)/m4.
(install-data-hook): Adjust.
* libtoolize.m4sh: Remove -I processing.
(func_filename_path_search): No longer required without -I.
Adjust all callers.
(pkgvltdldirs, pkgvmacrodirs): Deleted.
(pkgvdatadir): Allow overriding from the environment so that we
can write tests for uninstalled libtoolize.
(func_serial_update, func_ltmain_update, func_config_update):
Rename srcdirs parameter to srcdir, and don't call the path_search
function anymore.  Adjust all callers.
(--install): Don't blindly copy all config files.

--- a/Makefile.am
+++ b/Makefile.am
@@ -42,7 +42,6 @@ edit = sed \
 	-e 's,@datadir\@,$(datadir),g' \
 	-e 's,@host_triplet\@,$(host_triplet),g' \
 	-e 's,@pkgvdatadir\@,$(pkgvdatadir),g' \
-	-e 's,@pkgvmacrodir\@,$(pkgvmacrodir),g' \
 	-e 's,@prefix\@,$(prefix),g' \
 	-e "s,@configure_input\@,Generated from $$input; do not edit by hand,g"
 
@@ -83,12 +82,12 @@ $(top_srcdir)/tests/package.m4: $(top_srcdir)/configure.ac
 # These are required by libtoolize and must be executable when installed.
 # Since _SCRIPTS gets the program transform applied we make them
 # executable by hand
-dist_pkgvdata_DATA = config/config.guess config/config.sub config/ltmain.sh \
-	config/install-sh
+nobase_dist_pkgvdata_DATA = config/config.guess config/config.sub \
+	config/ltmain.sh config/install-sh
 
 # Everything that gets picked up by aclocal is automatically distributed,
 # this is the list of macro files we install on the user's system.
-pkgvmacro_DATA = m4/argz.m4 m4/libtool.m4 m4/ltdl.m4 \
+nobase_pkgvdata_DATA = m4/argz.m4 m4/libtool.m4 m4/ltdl.m4 \
 	m4/ltoptions.m4 m4/ltsugar.m4 m4/ltversion.m4
 
 ## We know that $(top_srcdir)/ChangeLog has been edited if stamp-vcl
@@ -224,9 +223,9 @@ install-data-local:
 	-rm -rf $(DESTDIR)$(aclocaldir)/libtool.m4
 
 install-data-hook:
-	chmod +x $(DESTDIR)$(pkgvdatadir)/config.guess
-	chmod +x $(DESTDIR)$(pkgvdatadir)/config.sub
-	chmod +x $(DESTDIR)$(pkgvdatadir)/install-sh
+	chmod +x $(DESTDIR)$(pkgvdatadir)/config/config.guess
+	chmod +x $(DESTDIR)$(pkgvdatadir)/config/config.sub
+	chmod +x $(DESTDIR)$(pkgvdatadir)/config/install-sh
 
 ## Make versioned links.  We only run the transform on the root name;
 ## then we make a versioned link with the transformed base name.  This
