Getting the value of ltdldatafiles from a submake was not portable, and had problems with GNU make-3.80 at least.  This changeset pulls the installation rules for libtoolize's copy of the libltdl sources out of libltdl/Makefile.am so that ltdldatafiles is defined in the same Makefile that uses it.  Also, this makes a start at cleaning up libltdl/Makefile.am so that it is useful in a package that uses `libtoolize --ltdl':
* libltdl/loaders/Makefile.am: Removed entirely.
* libltdl/Makefile.am (dlopen.la, dld_link.la, dyld.la)
(load_add_on.la, loadlibrary.la, shl_load.la): All built from here
now that the loaders submake has gone.
(show-ltdldatafiles): Removed.  No longer required.
(ltdldatadir, ltdldatafiles, install-local): Moved from here...
* Makefile.am (ltdldatadir, ltdldatafiles, install-local): ..to
here.
(libtoolize): Substitute $(ltdldatafiles) directly without calling
make to get the value from libltdl/Makefile.

--- a/Makefile.am
+++ b/Makefile.am
@@ -135,10 +135,9 @@ libtoolize: $(top_srcdir)/libtoolize.in
 	rm -f libtoolize.tmp libtoolize
 	$(timestamp); \
 	input="libtoolize.m4sh"; \
-	ltdldatafiles=`cd libltdl; make show-ltdldatafiles`; \
 	$(edit) -e "s,@TIMESTAMP\@,$$TIMESTAMP,g" \
 		-e 's,@aclocal_DATA\@,$(aclocal_DATA),g' \
-		-e "s,@pkgvltdl_files\@,`echo $$ltdldatafiles`,g" \
+		-e "s,@pkgvltdl_files\@,$(ltdldatafiles),g" \
 		$(top_srcdir)/libtoolize.in > libtoolize.tmp
 	chmod a+x libtoolize.tmp
 	chmod a-w libtoolize.tmp
@@ -183,9 +182,45 @@ configure-subdirs distdir: $(DIST_MAKEFILE_LIST)
 	abs_srcdir=`cd $(top_srcdir) && pwd`; \
 	(cd $$dir && $$abs_srcdir/$$dir/configure) || exit 1
 
+## These are installed as a subdirectory of pkgdatadir so that
+## libtoolize --ltdl can find them later:
+ltdldatadir		= $(pkgvdatadir)/libltdl
+ltdldatafiles		= COPYING.LIB README \
+			  Makefile.am Makefile.in \
+			  argz_.h argz.c \
+			  configure.ac configure \
+			  libltdl/lt__alloc.h \
+			  libltdl/lt__dirent.h \
+			  libltdl/lt__glibc.h \
+			  libltdl/lt__private.h \
+                          libltdl/lt__strl.h \
+			  libltdl/lt_dlloader.h \
+			  libltdl/lt_error.h \
+                          libltdl/lt_system.h \
+			  libltdl/slist.h \
+			  loaders/dld_link.c \
+			  loaders/dlopen.c \
+			  loaders/dyld.c \
+			  loaders/load_add_on.c \
+			  loaders/loadlibrary.c \
+			  loaders/preopen.c \
+			  loaders/shl_load.c \
+			  lt__alloc.c \
+			  lt__dirent.c \
+			  lt__strl.c \
+			  lt_dlloader.c \
+			  lt_error.c \
+			  ltdl.c ltdl.h \
+			  slist.c
+
 install-data-local:
 ## Don't install over the top of an old pkgdatadir
 	-rm -rf $(DESTDIR)$(pkgdatadir)
+## To avoid spurious reconfiguration when the user installs these files
+## with libtoolize, we have to preserve their timestamps carefully:
+	$(mkinstalldirs) $(DESTDIR)$(ltdldatadir)
+	( cd $(srcdir)/libltdl && $(AMTAR) chf - $(ltdldatafiles); ) \
+	  | ( umask 0 && cd $(DESTDIR)$(ltdldatadir) && $(AMTAR) xf -; )
 
 install-data-hook:
 	chmod +x $(DESTDIR)$(pkgdatadir)/config.guess
