* tests/template.at: New Autotest tests for C++ with templates. First test provided by Markus Christen <markus@igc.phys.chem.ethz.ch>. * tests/Makefile.am, tests/testsuite.at: Use and distribute.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -26,6 +26,7 @@ TESTSUITE_AT	= testsuite.at \
 		  am-subdir.at \
 		  functests.at \
 		  stresstest.at \
+		  template.at \
 		  inherited_flags.at
 
 EXTRA_DIST	= $(TESTSUITE) $(TESTSUITE_AT) package.m4
