* tests/libtoolize.at: New tests for basic libtoolize functionality and reporting. * tests/testsuite.at: Call them. * tests/Makefile.am: Distribute them.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -25,9 +25,10 @@ TESTSUITE	= testsuite
 TESTSUITE_AT	= testsuite.at \
 		  am-subdir.at \
 		  functests.at \
+		  inherited_flags.at \
+		  libtoolize,at \
 		  stresstest.at \
-		  template.at \
-		  inherited_flags.at
+		  template.at
 
 EXTRA_DIST	= $(TESTSUITE) $(TESTSUITE_AT) package.m4
 
