* notes.texi: Platform-specific configuration notes. * doc/libtool.texi: Include as section. * bootstrap, doc/Makefile.am: build also as notes.txt and distribute.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,4 +1,10 @@
 ## Process this file with automake to produce Makefile.in
 
 info_TEXINFOS = libtool.texi
-libtool_TEXINFOS = PLATFORMS fdl.texi
+libtool_TEXINFOS = PLATFORMS fdl.texi notes.texi
+EXTRA_DIST = notes.txt
+
+all-local: notes.txt
+
+notes.txt: notes.texi
+	cd $(srcdir) && $(MAKEINFO) --plaintext $(MAKEINFOFLAGS) -o $@ notes.texi
