* tests/linkorder.test: Move to * tests/link-order.test: New, with fixed permissions. * tests/Makefile.am: Adjust.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -46,7 +46,7 @@ COMMON_TESTS = \
 	pdemo-make.test pdemo-exec.test pdemo-inst.test \
 	mdemo-conf.test mdemo-make.test mdemo2-conf.test \
 	mdemo2-make.test mdemo2-exec.test \
-	duplicate_members.test  linkorder.test
+	duplicate_members.test link-order.test
 
 if HAVE_CXX
 if HAVE_F77
