--- a/Makefile.am
+++ b/Makefile.am
@@ -24,6 +24,56 @@
 
 ACLOCAL_AMFLAGS  = -I m4
 
+BUILD_SUBDIRS	= . libltdl
+SUBDIRS		= $(BUILD_SUBDIRS)
+DIST_SUBDIRS	= $(BUILD_SUBDIRS)
+EXTRA_DIST	=
+
+
+## ---------------- ##
+## Libtool scripts. ##
+## ---------------- ##
+
+# The libtool distributor and the standalone libtool script.
+bin_SCRIPTS = libtoolize libtool
+
+libtoolize: $(srcdir)/libtoolize.in
+	rm -f libtoolize.tmp libtoolize
+	$(timestamp); \
+	input="libtoolize.m4sh"; \
+	$(edit) -e "s,@TIMESTAMP\@,$$TIMESTAMP,g" \
+		-e 's,@nobase_pkgvdata_DATA\@,$(nobase_pkgvdata_DATA),g' \
+		-e "s,@pkgvltdl_files\@,`echo $(ltdldatafiles)`,g" \
+		$(srcdir)/libtoolize.in > libtoolize.tmp
+	chmod a+x libtoolize.tmp
+	chmod a-w libtoolize.tmp
+	mv -f libtoolize.tmp libtoolize
+
+# Use `$(srcdir)' for the benefit of non-GNU makes: this is
+# how libtoolize.in appears in our dependencies.
+EXTRA_DIST += libtoolize.m4sh
+$(srcdir)/libtoolize.in: $(sh_files) libtoolize.m4sh Makefile.am
+	cd $(srcdir); \
+	rm -f libtoolize.in; \
+	$(M4SH) -B ./config libtoolize.m4sh > libtoolize.in
+
+libtool: $(top_builddir)/config.status $(srcdir)/config/ltmain.sh \
+	 $(srcdir)/stamp-vcl
+	cd $(top_builddir) && $(SHELL) ./config.status $@
+
+.PHONY: configure-subdirs
+configure-subdirs distdir: $(DIST_MAKEFILE_LIST)
+@DIST_MAKEFILE_LIST@:
+	dir=`echo $@ | sed 's,^[^/]*$$,.,;s,/[^/]*$$,,'`; \
+	test -d $$dir || mkdir $$dir || exit 1; \
+	abs_srcdir=`cd $(srcdir) && pwd`; \
+	(cd $$dir && $$abs_srcdir/$$dir/configure) || exit 1
+
+
+# ---------- #
+# Bootstrap. #
+# ---------- #
+
 edit = sed \
 	-e 's,@EGREP\@,$(EGREP),g' \
 	-e 's,@FGREP\@,$(FGREP),g' \
@@ -45,39 +95,20 @@ edit = sed \
 	-e 's,@prefix\@,$(prefix),g' \
 	-e "s,@configure_input\@,Generated from $$input; do not edit by hand,g"
 
-timestamp = set dummy `$(MKSTAMP) < $(top_srcdir)/ChangeLog`; shift; \
+timestamp = set dummy `$(MKSTAMP) < $(srcdir)/ChangeLog`; shift; \
 	case $(VERSION) in \
 	  *[acegikmoqsuwy]) TIMESTAMP=" $$1 $$2 $$3" ;; \
 	  *) TIMESTAMP="" ;; \
 	esac
 
-BUILD_SUBDIRS = . libltdl doc tests
-SUBDIRS = $(BUILD_SUBDIRS)
-DIST_SUBDIRS = $(BUILD_SUBDIRS)
-
-sh_files = config/general.m4sh config/getopt.m4sh
-EXTRA_DIST = bootstrap libtoolize.in config/ltmain.m4sh config/mkstamp \
-	$(sh_files) stamp-vcl ChangeLog.1996 ChangeLog.1997 ChangeLog.1998 \
-	ChangeLog.1999 ChangeLog.2000 ChangeLog.2001 ChangeLog.2002 \
-	ChangeLog.2003
-CLEANFILES = libtool libtoolize \
-	libtoolize.tmp config/ltmain.tmp m4/ltversion.tmp
-
-## This properly belongs in tests/Makefile.am, but then we would have
-## to pass $(edit) to the submake or, worse, keep two copies of $(edit)
-## in synch, so instead we just build it from this Makefile.am:
-.PHONY: update-package-m4
-update-package-m4: $(top_srcdir)/tests/package.m4
-$(top_srcdir)/tests/package.m4: $(top_srcdir)/configure.ac
-	cd $(top_srcdir); \
-	{					\
-	  echo '# Signature of the current package.'; \
-	  echo 'm4_define([AT_PACKAGE_NAME],      [@PACKAGE_NAME@])'; \
-	  echo 'm4_define([AT_PACKAGE_TARNAME],   [@PACKAGE_TARNAME@])'; \
-	  echo 'm4_define([AT_PACKAGE_VERSION],   [@PACKAGE_VERSION@])'; \
-	  echo 'm4_define([AT_PACKAGE_STRING],    [@PACKAGE_STRING@])'; \
-	  echo 'm4_define([AT_PACKAGE_BUGREPORT], [@PACKAGE_BUGREPORT@])'; \
-	} | $(edit) > tests/package.m4
+sh_files	= config/general.m4sh config/getopt.m4sh
+EXTRA_DIST     += bootstrap libtoolize.in config/ltmain.m4sh config/mkstamp \
+		  $(sh_files) stamp-vcl ChangeLog.1996 ChangeLog.1997 \
+		  ChangeLog.1998 ChangeLog.1999 ChangeLog.2000 ChangeLog.2001 \
+		  ChangeLog.2002 ChangeLog.2003
+CLEANFILES 	= libtool libtoolize \
+		  libtoolize.tmp config/ltmain.tmp m4/ltversion.tmp
+DISTCLEANFILES =
 
 # These are required by libtoolize and must be executable when installed.
 # Since _SCRIPTS gets the program transform applied we make them
@@ -90,18 +121,18 @@ nobase_dist_pkgvdata_DATA = config/config.guess config/config.sub \
 nobase_pkgvdata_DATA = m4/argz.m4 m4/libtool.m4 m4/ltdl.m4 \
 	m4/ltoptions.m4 m4/ltsugar.m4 m4/ltversion.m4
 
-## We know that $(top_srcdir)/ChangeLog has been edited if stamp-vcl
-## needs updating, so we assume we have write access to $(top_srcdir).
+## We know that $(srcdir)/ChangeLog has been edited if stamp-vcl
+## needs updating, so we assume we have write access to $(srcdir).
 ## If we try to maintain ./stamp-vcl to avoid writing to a possibly
-## read-only $(top_srcdir), then when the two stamp-vcls differ, distcheck
+## read-only $(srcdir), then when the two stamp-vcls differ, distcheck
 ## will try to update the one in the read-only source tree it makes.
-MKSTAMP = $(SHELL) $(top_srcdir)/config/mkstamp
-$(top_srcdir)/stamp-vcl: vcl-tmp clean-ltmain-sh ChangeLog
+MKSTAMP = $(SHELL) $(srcdir)/config/mkstamp
+$(srcdir)/stamp-vcl: vcl-tmp clean-ltmain-sh ChangeLog
 vcl-tmp:
-	@set dummy `$(MKSTAMP) < $(top_srcdir)/ChangeLog`; shift; \
+	@set dummy `$(MKSTAMP) < $(srcdir)/ChangeLog`; shift; \
 	echo "$$1" > vcl.tmp; \
-	cmp -s vcl.tmp $(top_srcdir)/stamp-vcl \
-	  || (echo "Updating stamp-vcl"; cp vcl.tmp $(top_srcdir)/stamp-vcl)
+	cmp -s vcl.tmp $(srcdir)/stamp-vcl \
+	  || (echo "Updating stamp-vcl"; cp vcl.tmp $(srcdir)/stamp-vcl)
 	-@rm -f vcl.tmp
 
 ## We used to build ltmain.sh in the build tree, but now it is created
@@ -109,7 +140,7 @@ vcl-tmp:
 ## previous builds left behind in the build tree, that would override the
 ## source tree version in current builds.
 clean-ltmain-sh:
-	@-test "$(top_srcdir)" = "$(top_builddir)" || \
+	@-test "$(srcdir)" = "$(top_builddir)" || \
 	  rm -f "$(top_builddir)/config/ltmain.sh"
 
 # We build ltversion.m4 here, instead of from config.status,
@@ -117,12 +148,12 @@ clean-ltmain-sh:
 # dependencies change and ltversion.m4 happens to be a configure
 # dependency.  configure and ltversion.m4 would be rebuilt in
 # a loop otherwise.
-# Use `$(top_srcdir)/m4' for the benefit of non-GNU makes: this is
+# Use `$(srcdir)/m4' for the benefit of non-GNU makes: this is
 # how ltversion.m4 appears in our dependencies.
 EXTRA_DIST += m4/ltversion.in m4/ltversion.m4
-$(top_srcdir)/m4/ltversion.m4: m4/ltversion.in configure.ac $(top_srcdir)/stamp-vcl
-	set dummy `$(MKSTAMP) < $(top_srcdir)/ChangeLog`; shift; \
-	cd $(top_srcdir); \
+$(srcdir)/m4/ltversion.m4: m4/ltversion.in configure.ac $(srcdir)/stamp-vcl
+	set dummy `$(MKSTAMP) < $(srcdir)/ChangeLog`; shift; \
+	cd $(srcdir); \
 	rm -f m4/ltversion.tmp; \
 	serial=`echo $$1 | sed 's,^1[.],,g'`; \
 	input="ltversion.in"; \
@@ -134,16 +165,16 @@ $(top_srcdir)/m4/ltversion.m4: m4/ltversion.in configure.ac $(top_srcdir)/stamp-
 
 ## And for similar reasons, ltmain.sh can't be built from config.status.
 ## !WARNING! If you edit this rule to change the contents of ltmain.sh,
-##           you must `touch $(top_srcdir)/config/ltmain.in' from the
+##           you must `touch $(srcdir)/config/ltmain.in' from the
 ##           shell if you need ltmain.sh to be regenerated.  Ideally, we
 ##           should make this rule depend on Makefile but that will break
 ##           distcheck (at least) by rebuilding ltmain.sh in the source
 ##           tree whenever config.status regenerates the Makefile.
 EXTRA_DIST += config/ltmain.sh
-$(top_srcdir)/config/ltmain.sh: $(sh_files) config/ltmain.m4sh configure.ac \
-				$(top_srcdir)/stamp-vcl
+$(srcdir)/config/ltmain.sh: $(sh_files) config/ltmain.m4sh configure.ac \
+				$(srcdir)/stamp-vcl
 	$(timestamp); \
-	cd $(top_srcdir); \
+	cd $(srcdir); \
 	rm -f config/ltmain.in config/ltmain.tmp config/ltmain.sh; \
 	$(M4SH) -B ./config config/ltmain.m4sh > config/ltmain.in; \
 	input="ltmain.m4sh"; \
@@ -154,63 +185,25 @@ $(top_srcdir)/config/ltmain.sh: $(sh_files) config/ltmain.m4sh configure.ac \
 	chmod a-w config/ltmain.tmp; \
 	mv -f config/ltmain.tmp config/ltmain.sh
 
-# The libtool distributor and the standalone libtool script.
-bin_SCRIPTS = libtoolize libtool
 
-libtoolize: $(top_srcdir)/libtoolize.in
-	rm -f libtoolize.tmp libtoolize
-	$(timestamp); \
-	input="libtoolize.m4sh"; \
-	$(edit) -e "s,@TIMESTAMP\@,$$TIMESTAMP,g" \
-		-e 's,@nobase_pkgvdata_DATA\@,$(nobase_pkgvdata_DATA),g' \
-		-e "s,@pkgvltdl_files\@,`echo $(ltdldatafiles)`,g" \
-		$(top_srcdir)/libtoolize.in > libtoolize.tmp
-	chmod a+x libtoolize.tmp
-	chmod a-w libtoolize.tmp
-	mv -f libtoolize.tmp libtoolize
+## -------------- ##
+## Documentation. ##
+## -------------- ##
 
-# Use `$(top_srcdir)' for the benefit of non-GNU makes: this is
-# how libtoolize.in appears in our dependencies.
-EXTRA_DIST += libtoolize.m4sh
-$(top_srcdir)/libtoolize.in: $(sh_files) libtoolize.m4sh Makefile.am
-	cd $(top_srcdir); \
-	rm -f libtoolize.in; \
-	$(M4SH) -B ./config libtoolize.m4sh > libtoolize.in
+info_TEXINFOS		= doc/libtool.texi
+libtool_TEXINFOS	= doc/PLATFORMS doc/fdl.texi doc/notes.texi
+EXTRA_DIST	       += doc/notes.txt $(libtool_TEXINFOS)
 
-# The defs script shouldn't be recreated whenever the Makefile is
-# regenerated since the source tree can be read-only.
-check-recursive: tests/defs $(top_srcdir)/tests/testsuite
-tests/defs: $(top_srcdir)/tests/defs.in
-	rm -f tests/defs.tmp tests/defs; \
-	input="defs.m4sh"; \
-	$(edit) $(top_srcdir)/tests/defs.in > tests/defs.tmp; \
-	mv -f tests/defs.tmp tests/defs
+all-local: $(srcdir)/doc/notes.txt
 
-# Use `$(top_srcdir)/tests' for the benefit of non-GNU makes: this is
-# how defs.in appears in our dependencies.
-# No need to EXTRA_DIST defs.m4sh here, that is handled in tests/Makefile.am.
-$(top_srcdir)/tests/defs.in: config/general.m4sh tests/defs.m4sh Makefile.am
-	cd $(top_srcdir); \
-	rm -f tests/defs.in; \
-	$(M4SH) -B ./config tests/defs.m4sh > tests/defs.in
+$(srcdir)/doc/notes.txt: $(srcdir)/doc/notes.texi
+	cd $(srcdir)/doc && \
+	  $(MAKEINFO) --plaintext $(MAKEINFOFLAGS) -o notes.txt notes.texi
 
-$(top_srcdir)/tests/testsuite:
-	cd tests; \
-	$(MAKE) $(AM_MAKEFLAGS) testsuite
 
-# Automake doesn't want us to generate distributed files from config.status,
-# but the alternative (see libtool-1.4.3) was even uglier!
-libtool: $(top_builddir)/config.status $(top_srcdir)/config/ltmain.sh \
-	 $(top_srcdir)/stamp-vcl
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-
-.PHONY: configure-subdirs
-configure-subdirs distdir: $(DIST_MAKEFILE_LIST)
-@DIST_MAKEFILE_LIST@:
-	dir=`echo $@ | sed 's,^[^/]*$$,.,;s,/[^/]*$$,,'`; \
-	test -d $$dir || mkdir $$dir || exit 1; \
-	abs_srcdir=`cd $(top_srcdir) && pwd`; \
-	(cd $$dir && $$abs_srcdir/$$dir/configure) || exit 1
+## ------------- ##
+## Installation. ##
+## ------------- ##
 
 ## These are installed as a subdirectory of pkgdatadir so that
 ## libtoolize --ltdl can find them later:
@@ -262,6 +255,11 @@ install-data-hook:
 	chmod +x $(DESTDIR)$(pkgvdatadir)/config/config.sub
 	chmod +x $(DESTDIR)$(pkgvdatadir)/config/install-sh
 
+
+## ------------- ##
+## Distribution. ##
+## ------------- ##
+
 ## Make versioned links.  We only run the transform on the root name;
 ## then we make a versioned link with the transformed base name.  This
 ## seemed like the most reasonable approach.
@@ -281,6 +279,11 @@ uninstall-hook:
 	  fv="$$f-$(APIVERSION)"; \
 	  rm -f $(DESTDIR)$(bindir)/$$fv; \
 	done
+	@for f in $(ltdldatafiles); do \
+	  echo " rm -rf '$(DESTDIR)$(ltdldatadir)/$$f'"; \
+	  rm -f "$(DESTDIR)$(ltdldatadir)/$$f"; \
+	done
+
 
 ## Ship README.alpha only in alpha release, but renamed to README
 dist-hook:
@@ -289,3 +292,182 @@ dist-hook:
 	  *[a-z]) mv $(distdir)/README.alpha $(distdir)/README ;; \
 	  *)	  rm -f $(distdir)/README.alpha ;; \
 	esac
+
+
+## ----------- ##
+## Test suite. ##
+## ----------- ##
+
+TESTSUITE	= tests/testsuite
+TESTSUITE_AT	= tests/testsuite.at \
+		  tests/am-subdir.at \
+		  tests/functests.at \
+		  tests/inherited_flags.at \
+		  tests/libtoolize.at \
+		  tests/stresstest.at \
+		  tests/template.at
+
+EXTRA_DIST     += $(TESTSUITE) $(TESTSUITE_AT) tests/package.m4
+
+# Be sure to reexport important environment variables:
+TESTS_ENVIRONMENT = MAKE="$(MAKE)" CC="$(CC)" CFLAGS="$(CFLAGS)" \
+	CPP="$(CPP)" CPPFLAGS="$(CPPFLAGS)" LD="$(LD)" LDFLAGS="$(LDFLAGS)" \
+	LIBS="$(LIBS)" LN_S="$(LN_S)" NM="$(NM)" RANLIB="$(RANLIB)" \
+	OBJEXT="$(OBJEXT)" EXEEXT="$(EXEEXT)" CONFIG_SHELL="$(SHELL)" \
+	CXX="$(CXX)" CXXFLAGS="$(CXXFLAGS)" CXXCPP="$(CXXCPP)" \
+	F77="$(F77)" FFLAGS="$(FFLAGS)"
+
+check-recursive: $(srcdir)/$(TESTSUITE)
+
+# Use `$(srcdir)' for the benefit of non-GNU makes: this is
+# how `testsuite' appears in our dependencies.
+$(srcdir)/$(TESTSUITE): tests/package.m4 $(TESTSUITE_AT)
+	cd $(srcdir)/tests; \
+	$(AUTOTEST) testsuite.at -o testsuite
+
+$(srcdir)/tests/package.m4: $(srcdir)/configure.ac
+	{ \
+	  echo '# Signature of the current package.'; \
+	  echo 'm4_define([AT_PACKAGE_NAME],      [@PACKAGE_NAME@])'; \
+	  echo 'm4_define([AT_PACKAGE_TARNAME],   [@PACKAGE_TARNAME@])'; \
+	  echo 'm4_define([AT_PACKAGE_VERSION],   [@PACKAGE_VERSION@])'; \
+	  echo 'm4_define([AT_PACKAGE_STRING],    [@PACKAGE_STRING@])'; \
+	  echo 'm4_define([AT_PACKAGE_BUGREPORT], [@PACKAGE_BUGREPORT@])'; \
+	} | $(edit) > $(srcdir)/tests/package.m4
+
+tests/atconfig: config.status
+	$(SHELL) ./config.status tests/atconfig
+DISTCLEANFILES += tests/atconfig
+
+# Hook the test suite into the check rule
+check-local: tests/atconfig $(srcdir)/$(TESTSUITE)
+	abs_srcdir=`cd $(srcdir); pwd`; \
+	cd tests; \
+	$(TESTS_ENVIRONMENT) $(SHELL) $$abs_srcdir/$(TESTSUITE) $(TESTSUITE_FLAGS)
+
+# Run the test suite on the *installed* tree.
+installcheck-local:
+	abs_srcdir=`cd $(srcdir); pwd`; \
+	cd tests; \
+	$(TESTS_ENVIRONMENT) $(SHELL) $$abs_srcdir/$(TESTSUITE) $(TESTSUITE_FLAGS) AUTOTEST_PATH=$(exec_prefix)/bin
+
+# We need to remove any file droppings left behind by testsuite
+clean-local: clean-local-legacy
+	-abs_srcdir=`cd $(srcdir); pwd`; \
+	cd tests; \
+	test -f $$abs_srcdir/$(TESTSUITE) && \
+	    $(SHELL) $$abs_srcdir/$(TESTSUITE) --clean
+
+
+## ------------- ##
+## Legacy tests. ##
+## ------------- ##
+
+# !WARNING! Don't add any new tests here, we are migrating to an
+#           Autotest driven framework, please add new test cases
+#           using the new framework above.  When the migration is
+#           complete this section should be removed.
+
+CXX_TESTS = \
+	tests/tagdemo-static.test tests/tagdemo-make.test \
+	tests/tagdemo-exec.test tests/tagdemo-conf.test \
+	tests/tagdemo-make.test tests/tagdemo-exec.test \
+	tests/tagdemo-shared.test tests/tagdemo-make.test \
+	tests/tagdemo-exec.test tests/tagdemo-undef.test \
+	tests/tagdemo-make.test tests/tagdemo-exec.test
+
+F77_TESTS = \
+	tests/f77demo-static.test tests/f77demo-make.test \
+	tests/f77demo-exec.test tests/f77demo-conf.test \
+	tests/f77demo-make.test tests/f77demo-exec.test \
+	tests/f77demo-shared.test tests/f77demo-make.test \
+	tests/f77demo-exec.test
+
+COMMON_TESTS = \
+	tests/link.test tests/link-2.test tests/nomode.test \
+	tests/objectlist.test tests/quote.test tests/sh.test \
+	tests/suffix.test tests/tagtrace.test \
+	tests/cdemo-static.test tests/cdemo-make.test tests/cdemo-exec.test \
+	tests/demo-static.test tests/demo-make.test tests/demo-exec.test \
+	tests/demo-inst.test tests/demo-unst.test \
+	tests/depdemo-static.test tests/depdemo-make.test \
+	tests/depdemo-exec.test tests/depdemo-inst.test \
+	tests/depdemo-unst.test \
+	tests/mdemo-static.test tests/mdemo-make.test tests/mdemo-exec.test \
+	tests/mdemo-inst.test tests/mdemo-unst.test \
+	tests/cdemo-conf.test tests/cdemo-make.test tests/cdemo-exec.test \
+	tests/demo-conf.test tests/demo-make.test tests/demo-exec.test \
+	tests/demo-inst.test tests/demo-unst.test tests/demo-deplibs.test \
+	tests/depdemo-conf.test tests/depdemo-make.test \
+	tests/depdemo-exec.test tests/depdemo-inst.test \
+	tests/depdemo-unst.test \
+	tests/mdemo-conf.test tests/mdemo-make.test tests/mdemo-exec.test \
+	tests/mdemo-inst.test tests/mdemo-unst.test tests/mdemo-dryrun.test \
+	tests/mdemo2-conf.test tests/mdemo2-make.test tests/mdemo2-exec.test \
+	tests/pdemo-conf.test tests/pdemo-make.test tests/pdemo-exec.test \
+	tests/pdemo-inst.test \
+	tests/demo-nofast.test tests/demo-make.test tests/demo-exec.test \
+	tests/demo-inst.test tests/demo-unst.test \
+	tests/depdemo-nofast.test tests/depdemo-make.test \
+	tests/depdemo-exec.test tests/depdemo-inst.test \
+	tests/depdemo-unst.test \
+	tests/demo-pic.test tests/demo-make.test tests/demo-exec.test \
+	tests/demo-nopic.test tests/demo-make.test tests/demo-exec.test \
+	tests/cdemo-shared.test tests/cdemo-make.test tests/cdemo-exec.test \
+	tests/demo-shared.test tests/demo-make.test tests/demo-exec.test \
+	tests/demo-inst.test tests/demo-hardcode.test tests/demo-relink.test \
+	tests/demo-noinst-link.test tests/demo-unst.test \
+	tests/depdemo-shared.test tests/depdemo-make.test \
+	tests/depdemo-exec.test tests/depdemo-inst.test \
+	tests/depdemo-relink.test tests/depdemo-unst.test \
+	tests/mdemo-shared.test tests/mdemo-make.test tests/mdemo-exec.test \
+	tests/mdemo-inst.test tests/mdemo-unst.test \
+	tests/cdemo-undef.test tests/cdemo-make.test tests/cdemo-exec.test
+
+if HAVE_CXX
+if HAVE_F77
+TESTS = $(COMMON_TESTS) $(CXX_TESTS) $(F77_TESTS)
+else
+TESTS = $(COMMON_TESTS) $(CXX_TESTS)
+endif
+else
+if HAVE_F77
+TESTS = $(COMMON_TESTS) $(F77_TESTS)
+else
+TESTS = $(COMMON_TESTS)
+endif
+endif
+
+tests/demo-conf.test: libtool
+
+EXTRA_DIST     += tests/defs.in tests/defs.m4sh \
+		  $(COMMON_TESTS) $(CXX_TESTS) $(F77_TESTS)
+DIST_SUBDIRS   += $(CONF_SUBDIRS)
+
+# The defs script shouldn't be recreated whenever the Makefile is
+# regenerated since the source tree can be read-only.
+check-recursive: tests/defs
+tests/defs: $(srcdir)/tests/defs.in
+	rm -f tests/defs.tmp tests/defs; \
+	input="defs.m4sh"; \
+	$(edit) $(srcdir)/tests/defs.in > tests/defs.tmp; \
+	mv -f tests/defs.tmp tests/defs
+
+# Use `$(srcdir)/tests' for the benefit of non-GNU makes: this is
+# how defs.in appears in our dependencies.
+$(srcdir)/tests/defs.in: config/general.m4sh tests/defs.m4sh Makefile.am
+	cd $(srcdir); \
+	rm -f tests/defs.in; \
+	$(M4SH) -B ./config tests/defs.m4sh > tests/defs.in
+
+# We need to remove any files that the above tests created.
+clean-local-legacy:
+	-cd tests; \
+	for dir in cdemo demo depdemo f77demo mdemo mdemo2 pdemo tagdemo; \
+	do \
+	    test -f $$dir/Makefile && ( cd $$dir && $(MAKE) distclean; ); \
+	done
+	rm -rf _inst
+
+$(TESTS): tests/defs
+DISTCLEANFILES += tests/defs
