* config/ltmain.m4sh (link mode): Add to tmp_libs paths for libtool dep libs in reverse order as well. * Makefile.am, tests/testsuite.at, tests/link-order.at: New test.

--- a/Makefile.am
+++ b/Makefile.am
@@ -305,6 +305,7 @@ TESTSUITE_AT	= tests/testsuite.at \
 		  tests/inherited_flags.at \
 		  tests/libtoolize.at \
 		  tests/stresstest.at \
+		  tests/link-order.at \
 		  tests/template.at
 
 EXTRA_DIST     += $(TESTSUITE) $(TESTSUITE_AT) tests/package.m4
