* config/ltmain.m4sh (link mode): Add to tmp_libs paths for libtool dep libs in reverse order as well. * tests/Makefile.am, tests/link-order.test: New test.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -64,7 +64,8 @@ COMMON_TESTS = \
 	depdemo-inst.test depdemo-relink.test depdemo-unst.test \
 	mdemo-shared.test mdemo-make.test mdemo-exec.test \
 	mdemo-inst.test mdemo-unst.test \
-	cdemo-undef.test cdemo-make.test cdemo-exec.test
+	cdemo-undef.test cdemo-make.test cdemo-exec.test \
+	link-order.test
 
 if HAVE_CXX
 if HAVE_F77
