* libltdl/configure.ac (AC_OUTPUT): loaders/Makefile is no longer used.

--- a/libltdl/configure.ac
+++ b/libltdl/configure.ac
@@ -1,5 +1,5 @@
 ## Process this file with autoconf to create configure. -*- autoconf -*-
-# Copyright (C) 2004 Free Software Foundation, Inc.
+# Copyright (C) 2004, 2005 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -76,5 +76,5 @@ LTDL_INIT
 ## -------- ##
 ## Outputs. ##
 ## -------- ##
-AC_CONFIG_FILES([Makefile loaders/Makefile])
+AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
